--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -66,7 +66,7 @@ jobs:
         with:
           context: .
           push: false
-          tags: ${{ env.FOLDER_NAME }}
+          tags: ${{ env.IMAGE_NAME }}:latest
           cache-from: type=gha
           cache-to: type=gha,mode=max
           file: Dockerfile.prod
