--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -7,7 +7,7 @@ name: CI/CD
 
 on:
   pull_request:
-    branches: ['dev']
+    branches: ['dev', 'main']
 
 jobs:
   docker:
@@ -20,6 +20,8 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v5
         with:
+          context: .
+          dockerfile: Dockerfile.prod
           push: false
           tags: drakkefit/controle-livros-api:latest
 
