--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -15,7 +15,7 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v5
         with:
-          context: .
+          context: path/to/your/dockerfile/directory
           dockerfile: Dockerfile.prod
           push: false
           tags: drakkefit/controle-livros-api:latest
